update favicon links

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
         <meta name="keywords" content="program, product, program-manager, product-manager, HTML, CSS, JavaScript">
         <meta name="description" content="Peter Hintze – Product Manager">
         <meta name="author" content="Peter Hintze">
+
+         <!-- Place favicon.io in the root directory -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
-        <link rel="manifest" href="/favicon_io/site.webmanifest">
-        <!-- Place favicon.ico in the root directory -->
-      
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        
+        <!--CSS Stylesheets-->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link href="link href="https://fonts.googleapis.com/css?family=Lato:300,400|Raleway:300,400&display=swap" rel="stylesheet">
