Add CSS & update headshot

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--CSS Stylesheets-->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link href="link href="https://fonts.googleapis.com/css?family=Lato:300,400|Raleway:300,400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato|Raleway:300,400&display=swap" rel="stylesheet">
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161444288-1"></script>
