--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <img src="img/headshot.png">
+        <img src="img/headshot.png" class="headshot">
         <h4>Hi There — I'm Peter, a Program Manager based in NYC.</h4>
         <h6>I'm passionate about creating amazing software that makes life easier for everyone & changes the way we interact.</h6>
         <p>I'm currently a Program Manager at an <a href="https://www.pebblepost.com/" target="_blank">NYC-based startup</a>, leading 4 agile teams that are redefining how Brands interact with consumers in home. Prior to that I was working at <a href="https://moat.com/" target="_blank">Moat</a> for 2 and a half years. Where I worked with backend development teams to improve how we manage & store data, ensuring quick response times through our front end applications.
@@ -65,6 +65,7 @@
         <p>
           Check out my <a href="https://docs.google.com/document/d/1EoAXn-YfbEAl4LQ-3GvwUO2PD5koPOMrG2Uh4uy7yJg/edit?usp=sharing" target="_blank">Resume</a> or reach out to me on <a href="https://www.linkedin.com/in/peterhintze/" target="_blank">Linkedin</a>, or <a href="https://www.instagram.com/pics_of_pete/" target="_blank">Instagram</a>.
         </p>
+
       </div>
     </div>
   </div>
