--- a/index.html
+++ b/index.html
@@ -47,25 +47,30 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <img src="img/headshot.png" class="headshot">
+      <div class="column" style="margin-top: 25%">
+        <img src="img/headshot.png" class="headshot" alt="headshot">
         <h4>Hi There — I'm Peter, a Program Manager based in NYC.</h4>
         <h6>I'm passionate about creating amazing software that makes life easier for everyone & changes the way we interact.</h6>
         <p>I'm currently a Program Manager at an <a href="https://www.pebblepost.com/" target="_blank">NYC-based startup</a>, leading 4 agile teams that are redefining how Brands interact with consumers in home. Prior to that I was working at <a href="https://moat.com/" target="_blank">Moat</a> for 2 and a half years. Where I worked with backend development teams to improve how we manage & store data, ensuring quick response times through our front end applications.
         </p>
         <p>When I graduated from CUNY Baruch College in 2015, I jumped immediately into the Adtech industry. I started my career at <a href="https://www.mediamath.com/" target="_blank">MediaMath</a> through their Marketing Engineer program. It was through this program that I developed a deep facination for the industry and love for software technology.
         </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
         <p>From then on I knew I wanted to be deeply involved in software development. I strove to deepen my technical understanding through certifications & bootcamps:
-            <ul>
-                <li><a href="https://www.datacamp.com/" target="_blank">Python Bootcamp</a></li>
-                <li><a href="https://www.codecademy.com/learn/paths/web-development" target="_blank">Full Stack Web Development Courses</a></li>
-                <li><a href="https://www.scrum.org/professional-scrum-master-i-certification" target="_blank">Scrum Master Certification</a></li>
-            </ul>
-        </p>
-        <p>
-          Check out my <a href="https://docs.google.com/document/d/1EoAXn-YfbEAl4LQ-3GvwUO2PD5koPOMrG2Uh4uy7yJg/edit?usp=sharing" target="_blank">Resume</a> or reach out to me on <a href="https://www.linkedin.com/in/peterhintze/" target="_blank">Linkedin</a>, or <a href="https://www.instagram.com/pics_of_pete/" target="_blank">Instagram</a>.
-        </p>
-
+          <ul>
+              <li><a href="https://www.datacamp.com/" target="_blank">Python Bootcamp</a></li>
+              <li><a href="https://www.codecademy.com/learn/paths/web-development" target="_blank">Full Stack Web Development Courses</a></li>
+              <li><a href="https://www.scrum.org/professional-scrum-master-i-certification" target="_blank">Scrum Master Certification</a></li>
+          </ul>
+      </p>
+      <p>
+        Check out my <a href="https://docs.google.com/document/d/1EoAXn-YfbEAl4LQ-3GvwUO2PD5koPOMrG2Uh4uy7yJg/edit?usp=sharing" target="_blank">Resume</a> or reach out to me on social media!
+        <a href="https://www.linkedin.com/in/peterhintze/" target="_blank"><img src="img/linkedin.png" class="social"></a>
+        <a href="https://www.instagram.com/pics_of_pete/" target="_blank"><img src="img/instagram.png" class="social"></a>
+      </p>
       </div>
     </div>
   </div>
