updated footer; cleaned up formating

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p>From then on I knew I wanted to be deeply involved in software development. I continuely strive to deepen my technical understanding. Below is some of the certifications & bootcamps that I've completed:
           <ul class="offset-by-one-third column">
               <li><a href="https://www.datacamp.com/" target="_blank" class="button button-primary">Python Bootcamp</a></li>
-              <li><a href="https://www.codecademy.com/learn/paths/web-development" target="_blank" class="button button-primary">Full Stack Web Development Courses</a></li>
+              <li><a href="https://www.codecademy.com/learn/paths/web-development" target="_blank" class="button button-primary">Full Stack Web Development</a></li>
               <li><a href="https://www.scrum.org/professional-scrum-master-i-certification" target="_blank" class="button button-primary">Scrum Master Certification</a></li>
           </ul>
       </p>
@@ -71,10 +71,12 @@
       </div>
     </div>
     <div class="row">
-      <div class="offset-by-five columns">
-        <a href="https://www.linkedin.com/in/peterhintze/" target="_blank"><img src="img/linkedin.png" class="linkedin"></a>
-        <a href="https://www.instagram.com/pics_of_pete/" target="_blank"><img src="img/instagram.png" class="instagram"></a>
-      </p>
+      <hr class="footer-line">
+      <div class="footer-column">
+        <p>
+          <a href="https://www.linkedin.com/in/peterhintze/" target="_blank"><img src="img/linkedin.png" class="linkedin"></a>
+          <a href="https://www.instagram.com/pics_of_pete/" target="_blank"><img src="img/instagram.png" class="instagram"></a>
+        </p>
       </div>
     </div>
   </div>
