--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img src="img/headshot.png" class="headshot" alt="headshot">
         <h4>Hi There — I'm Peter, a Program Manager based in NYC.</h4>
         <h6>I'm passionate about creating amazing software that makes life easier for everyone & changes the way we interact.</h6>
-        <p>I'm currently a Program Manager at an <a href="https://www.pebblepost.com/" target="_blank">NYC-based startup</a>, leading 4 agile teams that are redefining how Brands interact with consumers in home. Prior to that I was working at <a href="https://moat.com/" target="_blank">Moat</a> for 2 and a half years. Where I worked with backend development teams to improve how we manage & store data, ensuring quick response times through our front end applications.
+        <p>I was most recenetly a Program Manager at an <a href="https://www.pebblepost.com/" target="_blank">NYC-based startup</a>, leading 4 agile teams, redefining how Brands interact with consumers in home. Prior to that I was working at <a href="https://moat.com/" target="_blank">Moat</a> for 2 and a half years. Where I worked with backend development teams to improve how we manage & store data, ensuring quick response times through our front end applications.
         </p>
       </div>
     </div>
