--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Peter Hintze | 2020</title>
+  <title>Peter Hintze | 2021</title>
   <meta name="description" content="">
   <meta name="keywords" content="program, product, program-manager, product-manager, HTML, CSS, JavaScript">
   <meta name="description" content="Peter Hintze – Product Manager">
@@ -49,9 +49,9 @@
     <div class="row">
       <div class="column" style="margin-top: 25%">
         <img src="img/headshot.png" class="headshot" alt="headshot">
-        <h4>Hi There — I'm Peter, a Program Manager based in NYC.</h4>
+        <h4>Hi There — I'm Peter, a Product Manager based in NYC.</h4>
         <h6>I'm passionate about creating amazing software that makes life easier for everyone & changes the way we interact.</h6>
-        <p>I was most recenetly a Program Manager at an <a href="https://www.pebblepost.com/" target="_blank">NYC-based startup</a>, leading 4 agile teams, redefining how Brands interact with consumers in home. Prior to that I was working at <a href="https://moat.com/" target="_blank">Moat</a> for 2 and a half years. Where I worked with backend development teams to improve how we manage & store data, ensuring quick response times through our front end applications.
+        <p>I am currently a Product Manager at <a href="https://advertising.amazon.com/" target="_blank">Amazon Ads</a>, leading development of an internal product management tool that improves how product teams interact with and release new features to advertisers. Prior to Amazon, I was working at <a href="https://www.pebblepost.com/" target="_blank">PebblePost</a> where I was responsible for leading product development for 4 cross-functional teams that were focusing on improving how advertisers interact with consumers with in-home advertising.
         </p>
       </div>
     </div>
@@ -66,7 +66,7 @@
               <li><a href="https://www.scrum.org/professional-scrum-master-i-certification" target="_blank" class="button button-primary">Scrum Master Certification</a></li>
           </ul>
       </p>
-      <p>Check out my <a href="https://docs.google.com/document/d/1Yrl8iY64hZAS28I_35pDdimArykOEqHks1ofXFlf4XA/edit?usp=sharing" target="_blank">Resume</a> & my <a href="https://github.com/coder-guy-pete/personal-website" target="_blank">github</a>, which I utilized to build this website!
+      <p>Check out my <a href="https://docs.google.com/document/d/1eh3I44e3M0sAuFGDofOfuWgdP396FdLphlm67trPa7E/edit?usp=sharing" target="_blank">Resume</a> & my <a href="https://github.com/coder-guy-pete/personal-website" target="_blank">github</a>, which I utilized to build this website!
       </p>
       </div>
     </div>
