--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img src="img/headshot.png" class="headshot" alt="headshot">
         <h4>Hi There — I'm Peter, a Product Manager based in NYC.</h4>
         <h6>I'm passionate about creating amazing software that makes life easier for everyone & changes the way we interact.</h6>
-        <p>I am currently a Product Manager at <a href="https://advertising.amazon.com/" target="_blank">Amazon Ads</a>, leading development of an internal product management tool that improves how product teams interact with and release new features to advertisers. Prior to Amazon, I was working at <a href="https://www.pebblepost.com/" target="_blank">PebblePost</a> where I was responsible for leading product development for 4 cross-functional teams that were focusing on improving how advertisers interact with consumers with in-home advertising.
+        <p>I am currently a Product Manager at <a href="https://advertising.amazon.com/" target="_blank">Amazon Ads</a>, leading development of an internal product management tool that improves how product teams interact with and release new features to advertisers. Prior to Amazon, I was working at <a href="https://www.pebblepost.com/" target="_blank">PebblePost</a> where I was responsible for leading product development for 4 cross-functional teams that were focusing on improving how advertisers interact with consumers through in-home advertising.
         </p>
       </div>
     </div>
