--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Peter Hintze | 2021</title>
+  <title>Peter Hintze | 2023</title>
   <meta name="description" content="">
-  <meta name="keywords" content="program, product, program-manager, product-manager, HTML, CSS, JavaScript">
+  <meta name="keywords" content="program, product, program-manager, product-manager, HTML, CSS, JavaScript, JSS">
   <meta name="description" content="Peter Hintze – Product Manager">
   <meta name="author" content="Peter Hintze">
 
@@ -49,9 +49,10 @@
     <div class="row">
       <div class="column" style="margin-top: 25%">
         <img src="img/headshot.png" class="headshot" alt="headshot">
-        <h4>Hi There — I'm Peter, a Product Manager based in NYC.</h4>
-        <h6>I'm passionate about creating amazing software that makes life easier for everyone & changes the way we interact.</h6>
-        <p>I am currently a Product Manager at <a href="https://advertising.amazon.com/" target="_blank">Amazon Ads</a>, leading development of an internal product management tool that improves how product teams interact with and release new features to advertisers. Prior to Amazon, I was working at <a href="https://www.pebblepost.com/" target="_blank">PebblePost</a> where I was responsible for leading product development for 4 cross-functional teams that were focusing on improving how advertisers interact with consumers through in-home advertising.
+        <h4>Hi There — I'm Peter, a Product Manager based out of Durham, NC.</h4>
+        <h6>I'm passionate about creating amazing software products that make life easier for users & changes the ways we interact.</h6>
+        <p>I am currently a Principle Program Manager at <a href="https://www.oracle.com/cx/advertising/" target="_blank">Oracle Advertising</a>, leading program efforts for a new suite of OA products that will soon be available. These new products will simplify our customer's experience when working with customer data and provide advertisers the tools they need to manage their data in a safe and compliant manner.
+          Prior to Oracle, I was working at <a href="https://advertising.amazon.com/" target="_blank">Amazon</a> where I was leading product development for an internal project management tool that helped other product managers get new products & features to market faster. The tool provided a means to collaborate with other internal teams, request feedback, and get the necessary approvals to proceed with development. 
         </p>
       </div>
     </div>
@@ -59,7 +60,7 @@
       <div class="column">
         <p>When I graduated from CUNY Baruch College in 2015, I jumped immediately into the Adtech industry. I started my career at <a href="https://www.mediamath.com/" target="_blank">MediaMath</a> through their Marketing Engineer program. It was through this program that I developed a deep facination for the industry and love for software technology.
         </p>
-        <p>From then on I knew I wanted to be deeply involved in software development. I continuely strive to deepen my technical understanding. Below is some of the certifications & bootcamps that I've completed:
+        <p>From then on, I knew I wanted to be deeply involved in software development. I continuously strive to deepen my technical understanding. Below is some of the certifications & bootcamps that I've completed to date:
           <ul class="offset-by-one-third column">
               <li><a href="https://www.datacamp.com/" target="_blank" class="button button-primary">Python Bootcamp</a></li>
               <li><a href="https://www.codecademy.com/learn/paths/web-development" target="_blank" class="button button-primary">Full Stack Web Development</a></li>
