project page added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Peter Hintze | 2023</title>
-  <meta name="description" content="">
+  <title>Peter Hintze | 2024</title>
   <meta name="keywords" content="program, product, program-manager, product-manager, HTML, CSS, JavaScript, JSS">
   <meta name="description" content="Peter Hintze – Product Manager">
   <meta name="author" content="Peter Hintze">
@@ -39,21 +38,25 @@
       gtag('js', new Date());
       gtag('config', 'UA-161444288-1');
   </script>
-
 </head>
+
 <body>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="column" style="margin-top: 25%">
+      <div class="column header" style="margin-top: 15%">
         <img src="img/headshot.png" class="headshot" alt="headshot">
-        <h4>Hi There — I'm Peter, a Product Manager based out of Durham, NC.</h4>
-        <h6>I'm passionate about creating amazing software products that make life easier for users & changes the ways we interact.</h6>
-        <p>I am currently a Principle Program Manager at <a href="https://www.oracle.com/cx/advertising/" target="_blank">Oracle Advertising</a>, leading program efforts for a new suite of OA products that will soon be available. These new products will simplify our customer's experience when working with customer data and provide advertisers the tools they need to manage their data in a safe and compliant manner.
-          Prior to Oracle, I was working at <a href="https://advertising.amazon.com/" target="_blank">Amazon</a> where I was leading product development for an internal project management tool that helped other product managers get new products & features to market faster. The tool provided a means to collaborate with other internal teams, request feedback, and get the necessary approvals to proceed with development. 
-        </p>
+        <h2>Hi There — I'm Peter, a Program Manager based out of Durham, NC.</h2>
+        <h6>I'm passionate about creating amazing software products that improve and enrich our lives.</h6>
+        <a class="button button-primary projects-btn" href="projects.html">Check out my projects</a>
+      </div>
+      <div class="row">
+        <div class="column">
+          <p>I am currently a Principal Program Manager at <a href="https://www.oracle.com/health/" target="_blank">Oracle Health</a>, leading program efforts for org-wide critical projects. These projects are focused on improving the overall customer experience and driving revenue growth. I work closely with cross-functional teams to ensure that we are delivering high-quality products on time and within budget. </p>
+          Prior to Oracle, I was working at <a href="https://advertising.amazon.com/" target="_blank">Amazon Advertising</a> where I was leading product development for an internal project management tool that helped product managers navigate the complexities of the Amazon ecosystem and get their products to market faster. The tool provided a means to collaborate with other internal teams, request feedback, and get the necessary approvals to proceed with development. </p>
+        </div>
       </div>
     </div>
     <div class="row">
@@ -62,21 +65,25 @@
         </p>
         <p>From then on, I knew I wanted to be deeply involved in software development. I continuously strive to deepen my technical understanding. Below is some of the certifications & bootcamps that I've completed to date:
           <ul class="offset-by-one-third column">
-              <li><a href="https://www.datacamp.com/" target="_blank" class="button button-primary">Python Bootcamp</a></li>
-              <li><a href="https://www.codecademy.com/learn/paths/web-development" target="_blank" class="button button-primary">Full Stack Web Development</a></li>
-              <li><a href="https://www.scrum.org/professional-scrum-master-i-certification" target="_blank" class="button button-primary">Scrum Master Certification</a></li>
+              <li><a href="https://www.datacamp.com/" target="_blank" class="button">Python Bootcamp</a></li>
+              <li><a href="https://www.codecademy.com/learn/paths/web-development" target="_blank" class="button">Full Stack Web Development</a></li>
+              <li><a href="https://www.scrum.org/professional-scrum-master-i-certification" target="_blank" class="button">Scrum Master Certification</a></li>
           </ul>
-      </p>
-      <p>Check out my <a href="https://docs.google.com/document/d/1eh3I44e3M0sAuFGDofOfuWgdP396FdLphlm67trPa7E/edit?usp=sharing" target="_blank">Resume</a> & my <a href="https://github.com/coder-guy-pete/personal-website" target="_blank">github</a>, which I utilized to build this website!
+        </p>
+        <p>
+          I am currently enrolled in a Full Stack Developer bootcamp at <a href="https://bootcamp.unc.edu/coding/curriculum/" target="_blank">UNC Chapel Hill</a>, to further my technical skills. I am excited to see where this journey takes me and how I can leverage my new skills to build amazing products. I will periodically update this site with my progress and projects that I am working on.
+        </p>
+        <p>Check out my <a href="https://docs.google.com/document/d/1eh3I44e3M0sAuFGDofOfuWgdP396FdLphlm67trPa7E/edit?usp=sharing" target="_blank">Resume</a> & my <a href="https://github.com/coder-guy-pete/personal-website" target="_blank">github</a>, which I utilized to build this website!
       </p>
       </div>
     </div>
     <div class="row">
       <hr class="footer-line">
       <div class="footer-column">
-        <p>
-          <a href="https://www.linkedin.com/in/peterhintze/" target="_blank"><img src="img/linkedin.png" class="linkedin"></a>
-          <a href="https://www.instagram.com/pics_of_pete/" target="_blank"><img src="img/instagram.png" class="instagram"></a>
+        <p class="links">
+          <a href="https://www.linkedin.com/in/peterhintze/" target="_blank"><img src="img/linkedin.png" class="linkedin" alt="LinkedIn link"></a>
+          <a href="https://github.com/coder-guy-pete" target="_blank"><img src="img/github.png" class="github" alt="Github link"></a>
+          <a href="https://www.instagram.com/pics_of_pete/" target="_blank"><img src="img/instagram.png" class="instagram" alt="Instagram link"></a>
         </p>
       </div>
     </div>
