--- a/index.html
+++ b/index.html
@@ -2,29 +2,18 @@
 <html lang="en">
 <head>
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Peter Hintze | 2024</title>
+  <title>Peter Hintze | 2025</title>
   <meta name="keywords" content="program, product, program-manager, product-manager, HTML, CSS, JavaScript, JSS">
   <meta name="description" content="Peter Hintze – Product Manager">
   <meta name="author" content="Peter Hintze">
-
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400&display=swap" rel="stylesheet">
-
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
 
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
@@ -42,13 +31,11 @@
 
 <body>
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
       <div class="column header" style="margin-top: 15%">
         <img src="img/headshot.png" class="headshot" alt="headshot">
-        <h2>Hi There — I'm Peter, a Program Manager based out of Durham, NC.</h2>
+        <h1>Peter Hintze</h1>
         <h6>I'm passionate about creating amazing software products that improve and enrich our lives.</h6>
         <a class="button button-primary projects-btn" href="projects.html">Check out my projects</a>
       </div>
@@ -73,8 +60,9 @@
         <p>
           I am currently enrolled in a Full Stack Developer bootcamp at <a href="https://bootcamp.unc.edu/coding/curriculum/" target="_blank">UNC Chapel Hill</a>, to further my technical skills. I am excited to see where this journey takes me and how I can leverage my new skills to build amazing products. I will periodically update this site with my progress and projects that I am working on.
         </p>
-        <p>Check out my <a href="https://docs.google.com/document/d/1eh3I44e3M0sAuFGDofOfuWgdP396FdLphlm67trPa7E/edit?usp=sharing" target="_blank">Resume</a> & my <a href="https://github.com/coder-guy-pete/personal-website" target="_blank">github</a>, which I utilized to build this website!
-      </p>
+        <p>
+          My up to date resume is available here: <a href="https://read.cv/phintze" target="_blank">read.cv</a>
+        </p>
       </div>
     </div>
     <div class="row">
@@ -88,8 +76,5 @@
       </div>
     </div>
   </div>
-
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
