--- a/index.html
+++ b/index.html
@@ -1,80 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Peter Hintze</title>
 
-  <meta charset="utf-8">
-  <title>Peter Hintze | 2025</title>
-  <meta name="keywords" content="program, product, program-manager, product-manager, HTML, CSS, JavaScript, JSS">
-  <meta name="description" content="Peter Hintze – Product Manager">
-  <meta name="author" content="Peter Hintze">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-
-  <!-- Favicon -->
+    <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
   <link rel="manifest" href="favicon_io/site.webmanifest">
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161444288-1"></script>
-  <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-161444288-1');
-  </script>
-</head>
-
-<body>
-
-  <div class="container">
-    <div class="row">
-      <div class="column header" style="margin-top: 15%">
-        <img src="img/headshot.png" class="headshot" alt="headshot">
-        <h1>Peter Hintze</h1>
-        <h6>I'm passionate about creating amazing software products that improve and enrich our lives.</h6>
-        <a class="button button-primary projects-btn" href="projects.html">Check out my projects</a>
-      </div>
-      <div class="row">
-        <div class="column">
-          <p>I am currently a Principal Program Manager at <a href="https://www.oracle.com/health/" target="_blank">Oracle Health</a>, leading program efforts for org-wide critical projects. These projects are focused on improving the overall customer experience and driving revenue growth. I work closely with cross-functional teams to ensure that we are delivering high-quality products on time and within budget. </p>
-          Prior to Oracle, I was working at <a href="https://advertising.amazon.com/" target="_blank">Amazon Advertising</a> where I was leading product development for an internal project management tool that helped product managers navigate the complexities of the Amazon ecosystem and get their products to market faster. The tool provided a means to collaborate with other internal teams, request feedback, and get the necessary approvals to proceed with development. </p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="column">
-        <p>When I graduated from CUNY Baruch College in 2015, I jumped immediately into the Adtech industry. I started my career at <a href="https://www.mediamath.com/" target="_blank">MediaMath</a> through their Marketing Engineer program. It was through this program that I developed a deep facination for the industry and love for software technology.
-        </p>
-        <p>From then on, I knew I wanted to be deeply involved in software development. I continuously strive to deepen my technical understanding. Below is some of the certifications & bootcamps that I've completed to date:
-          <ul class="offset-by-one-third column">
-              <li><a href="https://www.datacamp.com/" target="_blank" class="button">Python Bootcamp</a></li>
-              <li><a href="https://www.codecademy.com/learn/paths/web-development" target="_blank" class="button">Full Stack Web Development</a></li>
-              <li><a href="https://www.scrum.org/professional-scrum-master-i-certification" target="_blank" class="button">Scrum Master Certification</a></li>
-          </ul>
-        </p>
-        <p>
-          I am currently enrolled in a Full Stack Developer bootcamp at <a href="https://bootcamp.unc.edu/coding/curriculum/" target="_blank">UNC Chapel Hill</a>, to further my technical skills. I am excited to see where this journey takes me and how I can leverage my new skills to build amazing products. I will periodically update this site with my progress and projects that I am working on.
-        </p>
-        <p>
-          My up to date resume is available here: <a href="https://read.cv/phintze" target="_blank">read.cv</a>
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <hr class="footer-line">
-      <div class="footer-column">
-        <p class="links">
-          <a href="https://www.linkedin.com/in/peterhintze/" target="_blank"><img src="img/linkedin.png" class="linkedin" alt="LinkedIn link"></a>
-          <a href="https://github.com/coder-guy-pete" target="_blank"><img src="img/github.png" class="github" alt="Github link"></a>
-          <a href="https://www.instagram.com/pics_of_pete/" target="_blank"><img src="img/instagram.png" class="instagram" alt="Instagram link"></a>
-        </p>
-      </div>
-    </div>
-  </div>
-</body>
+  
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161444288-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-161444288-1');
+    </script>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
